--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,7 @@
 {
   "main": "index.js",
   "dependencies": {
-    "googleapis": "118.0.0"
+    "googleapis": "118.0.0",
+    "@google-cloud/secret-manager": "4.2.2"
   }
 }
